[package]
name = "minecraft_proxy"
version = "1.0.0"
authors = ["debilausaure"]
edition= "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["dns", "io-util", "macros", "process", "rt-threaded", "sync", "tcp", "time"] }
#mc_server_list_ping = {path="../../mc_server_list_ping"}
mc_server_list_ping = {git="https://github.com/debilausaure/mc_server_list_ping"}
