[package]
name = "minecraft_proxy"
version = "1.0.0"
authors = ["debilausaure", "irevoire"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
mc_server_list_ping = {git="https://github.com/debilausaure/mc_server_list_ping"}
